fix spacing for gift tracker

--- a/src/app/components/list-components/gift-details-modal/gift-details-modal.component.css
+++ b/src/app/components/list-components/gift-details-modal/gift-details-modal.component.css
@@ -43,7 +43,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 1em 0;
 }
 
 .line {
